# metaflow-data-etl

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
core/: helpers.py  main.py
tests/: conftest.py  test_df.py
