[tool.poetry]
name = "metaflow-data-etl"
version = "0.1.0"
description = ""
authors = ["wmaucla <williammaucla@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.2"
pyarrow = "^15.0.2"
polars = "^0.20.20"
hvplot = "^0.9.2"
metaflow = "^2.11.8"


[tool.poetry.group.dev.dependencies]
black = ">=23.10,<25.0"
ruff = "^0.3.4"
jupyter = "^1.0.0"
ipykernel = "^6.29.4"
pytest = "^8.1.1"
mypy = "^1.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
lint.select = [
    "E",     # pycodestyle
    "F",     # pyflakes
    "I",     # isort
    "A",     # flake8-builtins
    "ASYNC", # flake8-async
    "C4",    # flake8-comprehensions
    # flake8-bandit
    "S102",
    "S110",
    "S112",
    "S301",
    "S324",
    "S501",
    "S506",
    # pylint refactor
    "PLR5501",
    # pylint error
    "PLE1142",
    # pylint convention
    "PLC1901",
    "C901",
    "SIM108",
    "SIM110",
    "SIM115",
    ## docstrings
    "D300",
    "D402",
    "D417",
    "D418",
    "D419",
]
lint.ignore = ["A003"] #, "DTZ005", "DTZ011"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
lint.fixable = [
    "A",
    "B",
    "C",
    "D",
    "E",
    "F",
    "G",
    "I",
    "N",
    "Q",
    "S",
    "T",
    "W",
    "ANN",
    "ARG",
    "BLE",
    "COM",
    "DJ",
    "DTZ",
    "EM",
    "ERA",
    "EXE",
    "FBT",
    "ICN",
    "INP",
    "ISC",
    "NPY",
    "PD",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "SLF",
    "TCH",
    "TID",
    "TRY",
    "UP",
    "YTT",
]
# Allow ruff to use unstable rules and fixes
preview = true

lint.unfixable = []

exclude = []

# Same as Black.
line-length = 120

[tool.mypy]
ignore_missing_imports = true
